--- a/VRChat/51/1016051.html
+++ b/VRChat/51/1016051.html
@@ -77,10 +77,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "yokoshimaworks" data-product-category="127"
-        data-product-id="1016051" data-product-list="market_show"
-        data-product-price="500" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="yokoshimaworks" data-product-category=
+        "127" data-product-id="1016051" data-product-list=
+        "market_show" data-product-price="500" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -103,17 +104,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +125,13 @@
                             <img alt="ヨコシマ工房" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/5416959/icon_image/8a9c049e-c528-4ff8-b17e-adff3f2a52bd_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               ヨコシマ工房
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           VRChat向けオリジナル3Dモデル「くじらちゃん」
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -219,18 +220,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1016051"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "VRChat向けオリジナル3Dモデル「くじらちゃん」 | ヨコシマ工房"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1016051"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "VRChat向けオリジナル3Dモデル「くじらちゃん」 | ヨコシマ工房"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1016051"
@@ -240,7 +240,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -416,8 +416,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             大きなお胸に無邪気な笑顔、食べることが大好きな女の子、くじらちゃんです。デザインモチーフはその名の通り鯨。
                             VRChatでの利用を想定した３Dモデルです。 【バージョン更新履歴】
                             【2018年8月18日　Ver1.0　公開】
@@ -431,8 +431,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
